--- a/src/lang/languages/ar.json
+++ b/src/lang/languages/ar.json
@@ -98,7 +98,7 @@
     "payment": {
       "send": "إرسال الدفعة إلى",
       "send_": "العنوان والمبلغ المقدمين أدناه",
-      "info": "بمجرد إتمام الدفع ، أرسل إشعارًا إلى الدعم المباشر أو البريد الإلكتروني دعم support@reliancexchange.co. لإعلامنا بإيداعك الناجح"
+      "info": "بمجرد إتمام الدفع ، أرسل إشعارًا إلى الدعم المباشر أو البريد الإلكتروني دعم support@relianceexchange.co. لإعلامنا بإيداعك الناجح"
     },
     "tabs": {
       "account": "الحساب",
