--- a/src/lang/languages/ar.json
+++ b/src/lang/languages/ar.json
@@ -257,7 +257,7 @@
   "account": {
     "email": "عنوان البريد الإلكتروني",
     "password": "كلمة المرور",
-    "copyright": "حقوق الطبع والنشر",
+    "": "حقوق الطبع والنشر",
     "signin": {
       "title": "تسجيل الدخول",
       "remember": "تذكرني",
