--- a/src/lang/languages/ar.json
+++ b/src/lang/languages/ar.json
@@ -23,9 +23,10 @@
       "plans": "الخطط",
       "plan_helpertext": "اختر مخطط خطة الاستثمار",
       "plan_titles": {
-        "plan1": "Plan 1",
-        "plan2": "Plan 2",
-        "plan3": "Plan 3"
+        "title": "خطة",
+        "plan1": "خطة 1",
+        "plan2": "خطة 2",
+        "plan3": "خطة 3"
       },
       "action": {
         "investments": "استثماراتي",
@@ -129,8 +130,9 @@
         "subheader": "قوائم الموقع وتطبيق الويب المتاح"
       }
     },
+    "button": "تسجيل الدخول",
     "intro": {
-      "title": "INVEST WITH BITCOIN",
+      "title": "استثمر ببيتكوين",
       "subheader": "أفضل منصة استثمار سحابية في العالم",
       "body": "الاستثمار0",
       "button": "البدء"
@@ -208,7 +210,7 @@
         "questions": {
           "a": {
             "title": "ما هو هدفنا",
-            "subheader": "Hotblockinvest Investment Limited مستعدة لاقتراح تعاون مربح لجميع القادمين. نقدم شركة حديثة ذات تقنية عالية ومعترف بها كشركة رائدة في مجال تكنولوجيا الكمبيوتر والبرمجيات والابتكارات. يشارك خبراؤنا الفنيون في تطوير طرق جديدة وخوارزميات فعالة لتعدين البيتكوين."
+            "subheader": "الاستثمار مستعدة لاقتراح تعاون مربح لجميع القادمين. نقدم شركة حديثة ذات تقنية عالية ومعترف بها كشركة رائدة في مجال تكنولوجيا الكمبيوتر والبرمجيات والابتكارات. يشارك خبراؤنا الفنيون في تطوير طرق جديدة وخوارزميات فعالة لتعدين البيتكوين."
           },
           "b": {
             "title": "كم من الوقت تخطط للعمل",
