--- a/src/lang/languages/english.json
+++ b/src/lang/languages/english.json
@@ -104,7 +104,7 @@
     "payment": {
       "send": "Send payment to the",
       "send_": "address and amount provided below",
-      "info": "once payment is done send notification to live support or email support to support@relianceexchange.co. in order to notify us of your successful deposit"
+      "info": "once payment is done send notification to live support or email support to support@hotblockinvest.com. in order to notify us of your successful deposit"
     },
     "tabs": {
       "account": "Account",
