--- a/src/lang/languages/ar.json
+++ b/src/lang/languages/ar.json
@@ -297,8 +297,8 @@
       "text": "لقد قمت بتحديث ملفك الشخصي ، وسيتم تحديث ملفك الشخصي مرة واحدة نقوم بمراجعة وتأكيد تفاصيل ملفك الشخصي"
     },
     "deposit": {
-      "subject": "محفظة الائتمان",
-      "a": "إرسال الدفع الدقيق إلى هذا العنوان",
+      "subject": "محفظة الصندوق",
+      "a": "تحويل المبلغ الدقيق لهذا العنوان",
       "b": "المبلغ0",
       "c": "المبلغ1"
     },
