--- a/src/lang/languages/ar.json
+++ b/src/lang/languages/ar.json
@@ -41,15 +41,17 @@
       "plan_title": "الخطة",
       "duration": "المدة",
       "hour": "الساعات",
-      "Minimun_stake": "الحد الأدنى من الرهان",
-      "Maximun_stake": "حصة الحد الأقصى",
+      "Minimun_stake": "الحد الأدنى للاستثمار",
+      "Maximun_stake": "أقصى استثمار",
       "action": "حدد",
       "invoice": {
         "min": "الحد الأدنى من الرهان",
         "wallet_balance": "رصيد المحفظة",
         "min_profit": "ربح الحد الأدنى",
         "max_profit": "الربح الأقصى",
-        "action": "متابعة الدفع"
+        "action": "متابعة الدفع",
+        "amount": "مبلغ الاستثمار",
+        "helpertext": "أدخل مبلغ الاستثمار"
       }
     },
     "withdraw": {
@@ -75,7 +77,9 @@
       "return": "العودة",
       "confirm": "سحب",
       "date": "تاريخ الإيداع",
-      "status": "الحالة"
+      "status": "الحالة",
+      "pending": "قيد الانتظار",
+      "complete": "منجز"
     },
     "bonus": {
       "from": "من",
@@ -106,18 +110,18 @@
     },
     "tabs": {
       "account": "الحساب",
-      "acount_info": "الاستثمارات الجارية الحالية0",
-      "investments": "الاستثمارات الجارية الحالية1",
-      "bonus": "الاستثمارات الجارية الحالية2",
-      "deposit": "الاستثمارات الجارية الحالية3",
-      "withdraw": "الاستثمارات الجارية الحالية4"
+      "acount_info": "معلومات الحساب",
+      "investments": "الاستثمارات",
+      "bonus": "نقاط المكافأة",
+      "deposit": "الوديعة",
+      "withdraw": "اسحب المحفظة"
     },
     "titles": {
       "home": "الحساب",
-      "invest": "الاستثمارات الجارية الحالية5",
-      "invoice": "الاستثمارات الجارية الحالية6",
-      "withdraw": "الاستثمارات الجارية الحالية7",
-      "wallet": "الاستثمارات الجارية الحالية8"
+      "invest": "أضف الاستثمار",
+      "invoice": "فاتورة",
+      "withdraw": "انسحب",
+      "wallet": "محفظة نقود"
     }
   },
   "homepage": {
@@ -137,21 +141,21 @@
     "intro": {
       "title": "استثمر ببيتكوين",
       "subheader": "أفضل منصة استثمار سحابية في العالم",
-      "body": "الاستثمار0",
+      "body": "نأمل مخلصين أن تصبح شركتنا شريك حياتك.",
       "button": "البدء"
     },
     "activities": {
-      "deposit": "الاستثمار1",
-      "withdrawal": "الاستثمار2",
-      "subheader": "الاستثمار3",
-      "name": "الاستثمار4",
-      "amount": "الاستثمار5"
+      "deposit": "الوديعة",
+      "withdrawal": "انسحاب",
+      "subheader": "آخر 5 عمليات",
+      "name": "اسم",
+      "amount": "كمية"
     },
     "stats": {
-      "online": "الاستثمار6",
-      "accounts": "الاستثمار7",
-      "deposits": "الاستثمار8",
-      "withdrawn": "الاستثمار9"
+      "online": "أيام عبر الإنترنت",
+      "accounts": "إجمالي الحسابات",
+      "deposits": "إجمالي المودعين",
+      "withdrawn": "إجمالي الانسحاب"
     },
     "calculate_invest": {
       "title": "احسب الاستثمار",
@@ -174,21 +178,23 @@
       "subheader": "كل إحالتك تجلب لك مكافأة من مبلغ الإيداع. إيداعك الخاص غير مطلوب لجذب المستثمرين وكسب المال. ما عليك سوى تسجيل حسابك وتطبيق رابط الإحالة الخاص بك في كل مكان يمكنك."
     },
     "cac": {
-      "title": "احسب إجمالي أرباح الاستثمار0",
-      "subheader": "احسب إجمالي أرباح الاستثمار1"
+      "title": "الاستثمار ذ",
+      "subheader": "في يوليو 2016 ، اجتازت منظمتنا عملية التأسيس في المملكة المتحدة وتم إدراجها من قبل Companies House ، برقم لجنة شؤون الشركة التالية 10634443"
     },
     "footer": {
-      "made": "احسب إجمالي أرباح الاستثمار2",
+      "menu": "الروابط والوصلات",
+      "submenu": "قوائم مواقع الويب ووسائل التواصل الاجتماعي وجهات اتصال البريد الإلكتروني",
+      "made": "مصنوع من",
       "securities": {
-        "privacy": "احسب إجمالي أرباح الاستثمار3",
-        "terms": "احسب إجمالي أرباح الاستثمار4",
-        "Eu": "احسب إجمالي أرباح الاستثمار5"
+        "privacy": "سياسة الخصوصية",
+        "terms": "شروط الخدمة",
+        "Eu": "حماية بيانات الاتحاد الأوروبي"
       }
     },
     "pages": {
       "investments": {
-        "title": "احسب إجمالي أرباح الاستثمار6",
-        "subheader": "احسب إجمالي أرباح الاستثمار7"
+        "title": "الاستثمارات",
+        "subheader": "خططنا"
       },
       "about_us": {
         "title": "من نحن",
@@ -262,7 +268,6 @@
   "account": {
     "email": "عنوان البريد الإلكتروني",
     "password": "كلمة المرور",
-    "": "حقوق الطبع والنشر",
     "signin": {
       "title": "تسجيل الدخول",
       "remember": "تذكرني",
@@ -273,11 +278,11 @@
       "title": "الاشتراك",
       "fname": "الاسم الأول",
       "lname": "اسم العائلة",
-      "country": "كلمة المرور0",
-      "mobile": "كلمة المرور1",
-      "ref_id": "كلمة المرور2",
-      "terms": "كلمة المرور3",
-      "redir": "كلمة المرور4"
+      "country": "بلد",
+      "mobile": "الهاتف الخلوي",
+      "ref_id": "الرقم المرجعي",
+      "terms": "أوافق على الشروط والخصوصية والسياسة",
+      "redir": "هل لديك حساب"
     },
     "reset_pass": {
       "title": "كلمة المرور5"
@@ -299,21 +304,21 @@
     "deposit": {
       "subject": "محفظة الصندوق",
       "a": "تحويل المبلغ الدقيق لهذا العنوان",
-      "b": "المبلغ0",
-      "c": "المبلغ1"
+      "b": "بمجرد إتمام الدفع ، أرسل إشعارًا إلى الدعم المباشر أو الدعم عبر البريد الإلكتروني على",
+      "c": "لإبلاغنا بالإيداع الناجح"
     },
     "withdraw": {
-      "subject": "المبلغ2",
-      "a": "المبلغ3",
-      "b": "المبلغ4",
-      "c": "المبلغ5"
+      "subject": "طلب سحب",
+      "a": "لقد نجحت في تقديم طلب سحب المحفظة لـ",
+      "b": "إلى محفظة BTC الخاصة بك",
+      "c": "يرجى التحلي بالصبر أثناء معالجة معاملتك ، شكرًا"
     },
     "address": {
-      "subject_bonus": "المبلغ6",
-      "subject_withdraw": "المبلغ7",
-      "a": "المبلغ8",
-      "b": "المبلغ4",
-      "c": "المبلغ9"
+      "subject_bonus": "سحب المكافأة",
+      "subject_withdraw": "سحب الاستثمار",
+      "a": "لقد نجحت في تقديم طلب سحب لـ",
+      "b": "إلى محفظة BTC الخاصة بك",
+      "c": "يرجى التحلي بالصبر أثناء معالجة معاملتك ، شكرًا لك"
     }
   }
 }
