--- a/src/lang/languages/english.json
+++ b/src/lang/languages/english.json
@@ -43,15 +43,17 @@
       "plan_title": "Plan",
       "duration": "Duration",
       "hour": "Hours",
-      "Minimun_stake": "Minimun stake",
-      "Maximun_stake": "Maximun stake",
+      "Minimun_stake": "Minimum investment",
+      "Maximun_stake": "Maximum investment",
       "action": "Select",
       "invoice": {
-        "min": "Minimun stake",
+        "min": "Minimum stake",
         "wallet_balance": "Wallet balance",
-        "min_profit": "Minimun profit",
-        "max_profit": "Maximun profit",
-        "action": "Proceed to payment"
+        "min_profit": "Minimum profit",
+        "max_profit": "Maximum profit",
+        "action": "Proceed to payment",
+        "amount": "Amount",
+        "helpertext": "Enter investment amount"
       }
     },
     "withdraw": {
@@ -77,7 +79,9 @@
       "return": "Return",
       "confirm": "Withdraw",
       "date": "Deposit date",
-      "status": "Status"
+      "status": "Status",
+      "pending": "PENDING",
+      "complete": "COMPLETED"
     },
     "bonus": {
       "from": "From",
@@ -110,8 +114,8 @@
       "account": "Account",
       "acount_info": "Account Info",
       "investments": "Investments",
-      "bonus": "Bonus",
-      "deposit": "Wallet deposit",
+      "bonus": "Bonus points",
+      "deposit": "Deposit",
       "withdraw": "Withdraw wallet"
     },
     "titles": {
@@ -181,6 +185,8 @@
       "subheader": "In July 2016 our organization passed the incorporation process in the United Kingdom and is listed by Companies House, with the following corporate affairs commision number 10634443."
     },
     "footer": {
+      "menu": "Links and contacts",
+      "submenu": "website menus, socials and email contacts",
       "made": "Made with",
       "securities": {
         "privacy": "Privacy Policy",
@@ -267,7 +273,7 @@
   "account": {
     "email": "Email Address",
     "password": "Password",
-    "": "",
+
     "signin": {
       "title": "Sign in",
       "remember": "Remember me",
