--- a/src/lang/languages/english.json
+++ b/src/lang/languages/english.json
@@ -142,7 +142,7 @@
     },
     "button": "Login",
     "intro": {
-      "title": "INVEST WITH BITCOIN",
+      "title": "INVEST IN CRYPTOCURRENCY",
       "subheader": "World's best cloud investment platform",
       "body": "We sincerely hope that our company will become a partner in your life.",
       "button": "Get started"
