--- a/src/lang/languages/simpleen-RU.json
+++ b/src/lang/languages/simpleen-RU.json
@@ -106,7 +106,7 @@
     "payment": {
       "send": "Отправить платеж",
       "send_": "адрес и сумма, указанные ниже",
-      "info": "после оплаты отправьте уведомление в службу поддержки или по электронной почте на адрес support@cryptotradecenter.co. для того, чтобы сообщить нам об успешном пополнении счета."
+      "info": "после оплаты отправьте уведомление в службу поддержки или по электронной почте на адрес support@cryptotradecentral.co. для того, чтобы сообщить нам об успешном пополнении счета."
     },
     "tabs": {
       "account": "аккаунт",
