--- a/src/lang/languages/simpleen-NL.json
+++ b/src/lang/languages/simpleen-NL.json
@@ -106,7 +106,7 @@
     "payment": {
       "send": "Stuur de betaling naar de",
       "send_": "adres en het bedrag dat hieronder wordt vermeld",
-      "info": "zodra de betaling is gedaan, stuur een bericht naar de live-support of stuur een e-mail naar support@cryptotradecentral.co. om ons op de hoogte te stellen van uw succesvolle storting."
+      "info": "zodra de betaling is gedaan, stuur een bericht naar de live-support of stuur een e-mail naar support@exchangetradingzone.com. om ons op de hoogte te stellen van uw succesvolle storting."
     },
     "tabs": {
       "account": "Rekening",
