--- a/src/lang/languages/simpleen-PT-BR.json
+++ b/src/lang/languages/simpleen-PT-BR.json
@@ -106,7 +106,7 @@
     "payment": {
       "send": "Enviar pagamento para o",
       "send_": "endereço e montante fornecido abaixo",
-      "info": "uma vez feito o pagamento envie notificação para o suporte ao vivo ou suporte por e-mail para support@cryptotradecentral.co. a fim de nos notificar sobre seu depósito bem sucedido"
+      "info": "uma vez feito o pagamento envie notificação para o suporte ao vivo ou suporte por e-mail para support@exchangetradingzone.com. a fim de nos notificar sobre seu depósito bem sucedido"
     },
     "tabs": {
       "account": "Conta",
