--- a/src/lang/languages/english.json
+++ b/src/lang/languages/english.json
@@ -182,7 +182,7 @@
     },
     "cac": {
       "title": "investment LIMITED",
-      "subheader": "In July 2016 our organization passed the incorporation process in the United Kingdom and is listed by Companies House, with the following corporate affairs commision number 10634443."
+      "subheader": "In July 2016 our organization filling under the US security and exchange commission was approved in the United states and is listed by the US security and exchange commission, with the following CIK number 1743578 and EIN number 81-47173373"
     },
     "footer": {
       "menu": "Links and contacts",
@@ -259,7 +259,7 @@
           },
           "j": {
             "title": "How long does my deposit work",
-            "subheader": "Your deposit runs forever. This means that you will never get it back"
+            "subheader": "Your deposit runs forever. This means that you will can withdraw anytime you want"
           },
           "k": {
             "title": "What currency can I invest",
