--- a/src/lang/languages/english.json
+++ b/src/lang/languages/english.json
@@ -325,7 +325,7 @@
       "subject_withdraw": "investment withdrawal",
       "a": "You have successfully placed a withdrawal request of",
       "b": "to your BTC wallet",
-      "c": "Please exercise patience while we process your transaction, thanks you"
+      "c": "Please exercise patience while we process your transaction, thank you"
     }
   }
 }
