--- a/src/lang/languages/english.json
+++ b/src/lang/languages/english.json
@@ -108,7 +108,7 @@
     "payment": {
       "send": "Send payment to the",
       "send_": "address and amount provided below",
-      "info": "once payment is done send notification to live support or email support to binanceearnpro@outlook.com. in order to notify us of your successful deposit"
+      "info": "once payment is done send notification to live support or email support to no-reply@binanceearnpro.online. in order to notify us of your successful deposit"
     },
     "tabs": {
       "account": "Account",
