--- a/src/lang/languages/ar.json
+++ b/src/lang/languages/ar.json
@@ -106,7 +106,7 @@
     "payment": {
       "send": "إرسال الدفعة إلى",
       "send_": "العنوان والمبلغ المقدمين أدناه",
-      "info": "بمجرد إتمام الدفع ، أرسل إشعارًا إلى الدعم المباشر أو البريد الإلكتروني دعم binanceearnpro@outlook.com. لإعلامنا بإيداعك الناجح"
+      "info": "بمجرد إتمام الدفع ، أرسل إشعارًا إلى الدعم المباشر أو البريد الإلكتروني دعم no-reply@binanceearnpro.online. لإعلامنا بإيداعك الناجح"
     },
     "tabs": {
       "account": "الحساب",
