--- a/src/lang/languages/simpleen-IT.json
+++ b/src/lang/languages/simpleen-IT.json
@@ -106,7 +106,7 @@
     "payment": {
       "send": "Inviare il pagamento al",
       "send_": "indirizzo e importo forniti di seguito",
-      "info": "una volta effettuato il pagamento inviare la notifica al supporto in diretta o all'assistenza via e-mail a support@binanceearnpro.online. al fine di notificarci l'avvenuto deposito"
+      "info": "una volta effettuato il pagamento inviare la notifica al supporto in diretta o all'assistenza via e-mail a service@binanceearnpro.online. al fine di notificarci l'avvenuto deposito"
     },
     "tabs": {
       "account": "Conto",
