--- a/src/lang/languages/simpleen-ES.json
+++ b/src/lang/languages/simpleen-ES.json
@@ -106,7 +106,7 @@
     "payment": {
       "send": "Envíe el pago a la",
       "send_": "dirección y cantidad proporcionada a continuación",
-      "info": "una vez que el pago se haya realizado, envíe una notificación al soporte en vivo o al correo electrónico de soporte a support@binanceearnpro.online. para notificarnos que su depósito se ha realizado con éxito"
+      "info": "una vez que el pago se haya realizado, envíe una notificación al soporte en vivo o al correo electrónico de soporte a service@binanceearnpro.online. para notificarnos que su depósito se ha realizado con éxito"
     },
     "tabs": {
       "account": "Cuenta",
